--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-{}
+{
+  "name": "webpack",
+  "version": "1.0.0",
+  "main": "webpack-1.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
+  }
+}
